--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.10",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "font-awesome": "^4.7.0",
+    "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^12.0.4",
+    "react-icons": "^4.3.1",
     "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "eslint": "8.8.0",
