--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dropzone": "^12.0.4",
     "react-icons": "^4.3.1",
     "react-slick": "^0.28.1",
+    "recharts": "^2.1.9",
     "slick-carousel": "^1.8.1",
     "uuidv4": "^6.2.13"
   },
